@@ -5,7 +5,7 @@
 # of which can be found in the main directory of this project.
 Gentoo Linux Installer
 
-$Id: GLIArchitectureTemplate.py,v 1.244 2005/12/26 01:51:35 agaffney Exp $
+$Id: GLIArchitectureTemplate.py,v 1.245 2005/12/26 02:50:37 agaffney Exp $
 
 The ArchitectureTemplate is largely meant to be an abstract class and an 
 interface (yes, it is both at the same time!). The purpose of this is to create 
@@ -478,18 +478,19 @@ class ArchitectureTemplate:
 		installpackages = self._install_profile.get_install_packages()
 		if installpackages:
 			pkglist = self._portage.get_deps(" ".join(installpackages))
-#			if self._install_profile.get_grp_install():
+			if self._debug: self._logger.log("install_packages(): pkglist is " + str(pkglist))
 			for i, pkg in enumerate(pkglist):
+				if self._debug: self._logger.log("install_packages(): processing package " + pkg)
 				self.notify_frontend("progress", (float(i) / len(pkglist), "Emerging " + pkg + " (" + str(i) + "/" + str(len(pkglist)) + ")"))
-				try:
-					if not self._portage.get_best_version_vdb(pkg):
-						status = self._emerge("=" + pkg)
-						if not GLIUtility.exitsuccess(status):
-							raise GLIException("ExtraPackagesError", "fatal", "install_packages", "Could not emerge " + pkg + "!")
-					else:
+				if not self._portage.get_best_version_vdb(pkg):
+					status = self._emerge("=" + pkg)
+					if not GLIUtility.exitsuccess(status):
+						raise GLIException("ExtraPackagesError", "fatal", "install_packages", "Could not emerge " + pkg + "!")
+				else:
+					try:
 						self._portage.copy_pkg_to_chroot(pkg)
-				except:
-					raise GLIException("ExtraPackagesError", "fatal", "install_packages", "Could not emerge " + pkg + "!")
+					except:
+						raise GLIException("ExtraPackagesError", "fatal", "install_packages", "Could not emerge " + pkg + "!")
 
 		if GLIUtility.is_file(self._chroot_dir + "/etc/X11"):
 			# Copy the xorg.conf from the LiveCD if they installed xorg-x11
