@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.546 2005/12/26 01:51:35 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.547 2005/12/26 02:50:37 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
@@ -12,8 +12,11 @@
   use separate script for GRP deps
   remove calls to portage module
   modify get_deps() to get deptree for each package and merge into final list
+  remove depgraph class
+  add debugging code to get_deps()
   src/GLIArchitectureTemplate.py:
   combine code for GRP/compile in install_packages() into one block
+  debugging code in install_packages()
 
   23 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIPortage.py:
